cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_05225_grox-vpc-101.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: A VPC with three subnets. dmz and dev are attached to an Internet Gateway. prv is attached to a NAT Gateway.
Parameters:
  DevuserClientAccessCidrIp:
    Description: IP address for devuser client SecurityGroupIngress as xxx.xxx.xxx.xxx/32 CIDR block. Security Group dev allows access only from this IP block.
    Type: String
  EdiClientAccessCidrIp:
    Description: IP address for EDI SecurityGroupIngress as xxx.xxx.xxx.xxx/32 CIDR block. Security Group edi allows SFTP access only from this list of IP addresses or from the local VPC.
    Type: String
Resources:
  GroxVpc:
    Type: AWS::EC2::VPC
    Properties:
      Tags:
        - Key: Name
          Value: teal-vpc
      CidrBlock: 10.181.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
  GroxInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: igw-teal
  GroxVpcGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref GroxVpc
      InternetGatewayId: !Ref GroxInternetGateway
  GroxNatElasticIP:
    DependsOn: GroxVpcGatewayAttachment
    Type: AWS::EC2::EIP
    Properties:
      Tags:
        - Key: Name
          Value: eip-nat-teal
      Domain: vpc
  GroxNatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      Tags:
        - Key: Name
          Value: nat-teal
      AllocationId:
        Fn::GetAtt:
        - GroxNatElasticIP
        - AllocationId
      ConnectivityType: public
      SubnetId: !Ref GroxDmzSubnet
  GroxIgwRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: rtb-igw-teal
      VpcId: !Ref GroxVpc
  GroxNatRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: rtb-nat-teal
      VpcId: !Ref GroxVpc
  GroxInternetGatewayRoute:
    Type: AWS::EC2::Route
    DependsOn: GroxVpcGatewayAttachment
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref GroxInternetGateway
      RouteTableId: !Ref GroxIgwRouteTable
  GroxNatGatewayRoute:
    Type: AWS::EC2::Route
    DependsOn: GroxVpcGatewayAttachment
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref GroxNatGateway
      RouteTableId: !Ref GroxNatRouteTable
  GroxDmzSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      Tags:
        - Key: Name
          Value: teal-dmz
      VpcId: !Ref GroxVpc
      CidrBlock: 10.181.4.0/22
      MapPublicIpOnLaunch: true
  GroxDevSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      Tags:
        - Key: Name
          Value: teal-dev
      VpcId: !Ref GroxVpc
      CidrBlock: 10.181.8.0/22
      MapPublicIpOnLaunch: true
  GroxPrvSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      Tags:
        - Key: Name
          Value: teal-prv
      VpcId: !Ref GroxVpc
      CidrBlock: 10.181.12.0/22
      MapPublicIpOnLaunch: false
  GroxDmzSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref GroxIgwRouteTable
      SubnetId: !Ref GroxDmzSubnet
  GroxDevSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref GroxIgwRouteTable
      SubnetId: !Ref GroxDevSubnet
  GroxPrvSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref GroxNatRouteTable
      SubnetId: !Ref GroxPrvSubnet
  GroxDevSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      Tags:
        - Key: Name
          Value: sg-teal-dev
      GroupName: teal-dev
      GroupDescription: Developer machines--SSH and RDP in, all traffic out.  Access controlled by a combination of RSA key with passphrase, VPN, white-listed IP addresses, SSH tunneling.
      VpcId: !Ref GroxVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref DevuserClientAccessCidrIp
        - IpProtocol: tcp
          FromPort: '3389'
          ToPort: '3389'
          CidrIp: !Ref DevuserClientAccessCidrIp
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
  GroxWebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      Tags:
        - Key: Name
          Value: sg-teal-web
      GroupName: teal-web
      GroupDescription: Web servers--HTTP and HTTPS from the public Internet. SSH allowed only from within this VPC, using an RSA key with passphrase.
      VpcId: !Ref GroxVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 10.181.0.0/16
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
  GroxEdiSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      Tags:
        - Key: Name
          Value: sg-teal-edi
      GroupName: teal-edi
      GroupDescription: EDI servers -- SSH allowed only from within this VPC or from whitelisted IP address, using an RSA key with passphrase.
      VpcId: !Ref GroxVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 10.181.0.0/16
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref EdiClientAccessCidrIp
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
  GroxPrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      Tags:
        - Key: Name
          Value: sg-teal-prv
      GroupName: teal-prv
      GroupDescription: Private servers -- SSH allowed only from within this VPC, using an RSA key with passphrase.
      VpcId: !Ref GroxVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 10.181.0.0/16
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
Outputs:
  GroxVpc:
    Description: A VPC with a unique color name.
    Value: !Ref GroxVpc
    Export:
      Name: GroxTealVpc
  GroxDevSubnet:
    Description: A subnet for developer machines.
    Value: !Ref GroxDevSubnet
    Export:
      Name: GroxTealDevSubnet
  GroxDmzSubnet:
    Description: A subnet for publicly accessible Internet servers.
    Value: !Ref GroxDmzSubnet
    Export:
      Name: GroxTealDmzSubnet
  GroxPrvSubnet:
    Description: A subnet for private subnet servers.
    Value: !Ref GroxPrvSubnet
    Export:
      Name: GroxTealPrvSubnet
  GroxDevSecurityGroup:
    Description: Developer machines--SSH and RDP in, all traffic out.  Access controlled by a combination of RSA key with passphrase, VPN, white-listed IP addresses, SSH tunneling.
    Value: !Ref GroxDevSecurityGroup
    Export:
      Name: GroxTealDevSecurityGroup
  GroxWebSecurityGroup:
    Description: Internet Servers - open to HTTP and HTTPS.  SSH access from within this VPC.
    Value: !Ref GroxWebSecurityGroup
    Export:
      Name: GroxTealWebSecurityGroup
  GroxEdiSecurityGroup:
    Description: SFTP server - open to SSH access from within this VPC or by designated (whitelisted) client IP address.
    Value: !Ref GroxEdiSecurityGroup
    Export:
      Name: GroxTealEdiSecurityGroup
  GroxPrivateSecurityGroup:
    Description: Private Servers.  SSH access only from within this VPC.
    Value: !Ref GroxPrivateSecurityGroup
    Export:
      Name: GroxTealPrivateSecurityGroup
